--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node tests/test.js",
+    "start": "node index.js",
+    "dev": "nodemon index.js --ignore /tests"
   },
   "keywords": [],
   "author": "",
